@@ -66,6 +66,11 @@ Disclaimer.  [pt_BR]
 jungmann@cwb.matrix.com.br
 
 
+TRANSLATIONS   Pedro Morais
+??????????.  [pt_PT]
+morais@poli.org
+
+
 TRANSLATIONS	Janusz Aleksander Urbanowicz	1999-01-09
 Disclaimer.  [po]
 alex@bofh.torun.pl
