@@ -17,7 +17,7 @@ Christian von Roques	roques@pond.sub.org
 Christopher Oliver	oliver@fritz.traverse.net
 Christian Recktenwald	chris@citecs.de
 Daniel Eisenbud 	eisenbud@cs.swarthmore.edu
-Daniel Koenig		dan@mail.isis.de
+Daniel Koening		dan@mail.isis.de
 David Ellement		ellement@sdd.hp.com
 Detlef Lannert		lannert@lannert.rz.uni-duesseldorf.de
 Dirk Lattermann 	dlatt@t-online.de
