@@ -1,32 +1,31 @@
-Mon Sep 13 10:51:29 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>
+Wed Sep 15 16:22:17 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>
 
+
+	* rndw32.c: New.
+
+Mon Sep 13 10:51:29 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>
 
 	* bithelp.h: New.
 	* rmd160.h, sha1.h, md5.h: Use the rol macro from bithelp.h
 
 Tue Sep  7 16:23:36 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>
 
-
 	* Makefile.am: Fixed seds for latest egcc. By Ollivier Robert.
 
 Mon Sep  6 19:59:08 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>
 
-
 	* des.c (selftest): Add some testpattern
 
 Mon Aug 30 20:38:33 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>
-
 
 	* cipher.c (do_cbc_encrypt): Fixed serious bug occuring when not using
 	in place encryption. Pointed out by Frank Stajano.
 
 Mon Jul 26 09:34:46 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>
 
-
 	* md5.c (md5_final): Fix for a SCO cpp bug.
 
 Thu Jul 15 10:15:35 CEST 1999  Werner Koch  <wk@isil.d.shuttle.de>
-
 
 	* elgamal.c (elg_check_secret_key,elg_encrypt
 	elg_decrypt,elg_sign,elg_verify): Sanity check on the args.
